# tree-sitter-cypher

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-cypher.pc.in
bindings/go/: binding_test.go
bindings/node/: index.js
bindings/python/tree_sitter_cypher/: __init__.py
bindings/rust/: build.rs  lib.rs
corpus/: valid_match_clause.tree  valid_match_clause.txt
src/: grammar.json  node-types.json  parser.c  scanner.c
