[package]
name = "tree-sitter-cypher"
description = "Tree sitter for Cypher"
version = "0.1.0"
authors = ["Hari Bantwal <hpai.bantwal@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "cypher"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/pupli/tree-sitter-cypher"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
